refactor: cleaning up unnecessary codes[C